src/objects/Tessuto__c.object
<CustomObject>
    <fields>
        <fullName>Codice__c</fullName>
        <label>Codice</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descrizione_Tessuto__c</fullName>
        <label>Descrizione Tessuto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peso__c</fullName>
        <label>Peso</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipologia_Tessuto__c</fullName>
        <label>Tipologia Tessuto</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Tessuto</label>
    <nameField>
        <label>Tessuto Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tessuti</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>